--- a/desktop/package.json
+++ b/desktop/package.json
@@ -3,10 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^3.3.7",
     "google-maps-react": "^1.1.0",
     "react": "^15.0.0",
     "react-dom": "^15.0.0",
     "react-google-maps": "^8.5.0",
+    "react-router": "1.0.3",
+    "react-router-bootstrap": "^0.19.3",
     "react-scripts": "1.0.14"
   },
   "scripts": {
