--- a/desktop/package.json
+++ b/desktop/package.json
@@ -8,7 +8,7 @@
     "react": "^15.0.0",
     "react-dom": "^15.0.0",
     "react-google-maps": "^8.5.0",
-    "react-router": "1.0.3",
+    "react-router": "^3.0.0",
     "react-router-bootstrap": "^0.19.3",
     "react-scripts": "1.0.14"
   },
