--- a/desktop/package.json
+++ b/desktop/package.json
@@ -6,6 +6,7 @@
     "bootstrap": "^3.3.7",
     "google-maps-react": "^1.1.0",
     "react": "^15.0.0",
+    "react-bootstrap-table": "^4.0.6",
     "react-dom": "^15.0.0",
     "react-google-maps": "^8.5.0",
     "react-router": "^3.0.0",
