--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "1.18.2",
+    "cors": "2.8.4",
     "express": "4.16.2",
     "nodemon": "1.12.1",
     "nyc-bytes": "1.0.1",
