--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,11 +2,11 @@
 version: '3'
 
 services:
-  # frontend :
-  #   image: willzj/rebny_frontend:latest
-  #   container_name : frontend
-  #   ports:
-  #     - "3001:3001"
+  frontend :
+    image: willzj/rebny_frontend:latest
+    container_name : frontend
+    ports:
+      - "3001:3001"
   backend :
     image: willzj/rebny_backend:latest
     container_name : backend
