--- a/backend/package.json
+++ b/backend/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node --use_strict index.js",
-    "dev": "nodemon --use_strict index.js"
+    "start": "nodemon index.js",
+    "dev": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bluebird": "3.5.1",
     "body-parser": "1.18.2",
     "cors": "2.8.4",
     "express": "4.16.2",
