--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,8 +15,8 @@ services:
   db :
     image : postgres
     container_name: db
-    volumes :
-      - /usr/src/app/data:/var/lib/postgresql/data
+    # volumes :
+    #   - /usr/src/app/data:/var/lib/postgresql/data
     expose :
       - "5432"
     environment :
