--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,13 @@
 version: '3'
 
 services:
-  # frontend :
-  #   image: willzj/rebny_frontend:latest
-  #   container_name : frontend
-  #   ports:
-  #     - "3001:3001"
+  frontend :
+    image: anirray/rebny_frontend:latest
+    container_name : frontend
+    ports:
+      - "3001:3001"
   backend :
-    image: willzj/rebny_backend:latest
+    image: anirray/rebny_backend:latest
     container_name : backend
     ports:
       - "3002:3002"
