--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     image: anirray/rebny_frontend:latest
     container_name : frontend
     ports:
-      - "3001:3001"
+      - "80:3001"
   backend :
     image: anirray/rebny_backend:latest
     container_name : backend
@@ -15,8 +15,8 @@ services:
   db :
     image : postgres
     container_name: db
-    # volumes :
-    #   - /usr/src/app/data:/var/lib/postgresql/data
+    volumes :
+      - /usr/src/app/data:/var/lib/postgresql/data
     expose :
       - "5432"
     environment :
