--- a/desktop-2/package.json
+++ b/desktop-2/package.json
@@ -56,6 +56,7 @@
     "babel-preset-stage-2": "^6.24.1",
     "bootstrap": "^3.3.7",
     "chalk": "2.3.0",
+    "css-loader": "^0.28.9",
     "ejs": "^2.5.7",
     "enzyme-adapter-react-16": "^1.1.0",
     "express": "^4.16.2",
@@ -64,9 +65,11 @@
     "pm2": "^2.8.0",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
+    "react-bootstrap": "^0.32.1",
     "react-dom": "^16.2.0",
     "react-redux": "5.0.6",
     "react-router-dom": "4.2.2",
+    "react-svg-loader": "^2.1.0",
     "redux": "3.7.2",
     "redux-immutable-state-invariant": "2.1.0",
     "redux-thunk": "2.2.0",
